--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/navbar.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/flipcard.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/style.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/navbar.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/footer.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/flipcard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="about-img">
-                    <img src="/assets/img/others/csc_logo.png">
+                    <img src="/cscadit/assets/img/others/csc_logo.png">
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
             <div class="event-cnt">
                 <div class="event-img">
                     <div class="event-img-cnt">
-                        <img src="/assets/img/events/event1-1.jpg" alt="">
+                        <img src="/cscadit/assets/img/events/event1-1.jpg" alt="">
                         <div class="layer">
                             <div class="layer-cnt">
                                 <h1>Introductory Session of Cyber Security Club</h1>
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="event-img-cnt">
-                        <img src="/assets/img/events/event2-1.jpg" alt="">
+                        <img src="/cscadit/assets/img/events/event2-1.jpg" alt="">
                         <div class="layer">
                             <div class="layer-cnt">
                                 <h1>Hands-on Workshop</h1>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="event-img-cnt">
-                        <img src="/assets/img/events/event3-3.webp" alt="">
+                        <img src="/cscadit/assets/img/events/event3-3.webp" alt="">
                         <div class="layer">
                             <div class="layer-cnt">
                                 <h1>Inauguration Ceremony</h1>
@@ -107,11 +107,11 @@
                     <div class="btn">
                         <a href="/event.html">Read More</a>
                     </div>
-                    <!-- <img src="/assets/img/events/2.jpg" alt="">
-                    <img src="/assets/img/events/3.jpg" alt="">
-                    <img src="/assets/img/events/event1-1.jpg" alt="">
-                    <img src="/assets/img/events/event1-2.jpg" alt="">
-                    <img src="/assets/img/events/event1-3.webp" alt=""> -->
+                    <!-- <img src="/cscadit/assets/img/events/2.jpg" alt="">
+                    <img src="/cscadit/assets/img/events/3.jpg" alt="">
+                    <img src="/cscadit/assets/img/events/event1-1.jpg" alt="">
+                    <img src="/cscadit/assets/img/events/event1-2.jpg" alt="">
+                    <img src="/cscadit/assets/img/events/event1-3.webp" alt=""> -->
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/assets/img/team/krunalsir.jpg">
+                            <img src="/cscadit/assets/img/team/krunalsir.jpg">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
@@ -141,7 +141,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/assets/img/team/DSC_0169-min.JPG" alt="">
+                            <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
@@ -159,7 +159,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/assets/img/team/DSC_0148-min (1).JPG" alt="">
+                            <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
@@ -236,7 +236,7 @@
         sidemeu.style.right="-250px";
     }
 </script> 
-<script src="/assets/js/script.js"></script>
+<script src="/cscadit/assets/js/script.js"></script>
 </body>
 
 </html>
