--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/navbar.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/about.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/style.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/navbar.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/footer.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
                     <p>A. D. Patel Institute of Technology is proud to launch The Cyber Security Club!!! It is mandated to provide industry focused and industry-driven hands-on courses in Cyber Security and Ethical Hacking. Cyber Security Club strives to narrow the gap between the academic approach to cyber security and ethical hacking domains as currently provided by the educational institutions and the practically oriented approach as demanded by the industry. We are offering a wide variety of hands-on workshops and seminars for beginners as well as experts in Network Security, Application Security, Information Security, Operational Security, Disaster Recovery and Business Continuity and many more. End-user education addresses the most unpredictable cyber-security factor: people. Anyone can accidentally introduce a virus to an otherwise secure system by failing to follow good security practices. Teaching users to delete suspicious email attachments, not plug in unidentified USB drives, and various other important lessons is vital for the security of any organization. The Cyber Security Club thrives to help everyone go through all the phases of Cyber Security, namely – Identify, Protect, Detect and React. Providing a roadmap to all the members of the club and help them attain expertise in the field by making all able to face challenges such as ransomware, alert fatigue, kill chains, phishing attacks. Also, given that ethical hacking is a part of Cyber Security, which mainly deals with finding vulnerabilities in a system and solving them before any malicious or black-hat hacker exploits them, the club helps you figure out how to ensure that your application is fully secure and nobody can bypass the security system. With a little effort and lots of curiosity from your end, and help and support from our end, let’s say in the near future, one will be able to evaluate the performance of a system by testing it for various security breaches, make suggestions for enhancing the security system of the company and assign only appropriate access privileges for advanced system protection. Also, the club will make one able to explain any organization, the consequences of malicious attacks, perform regular audits and discover inefficiencies in the system.</p>
                 </div>
                 <div class="icn">
-                    <img src="/assets/img/others/1.png">
+                    <img src="/cscadit/assets/img/others/1.png">
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
             <h1 class="sub-title">AIM</h1>
             <div class="cnt">
                 <div class="icn">
-                    <img src="/assets/img/others/5.png">
+                    <img src="/cscadit/assets/img/others/5.png">
                 </div>
                 <div class="txt">
                     <ul>
@@ -74,7 +74,7 @@
                     </ul>
                 </div>
                 <div class="icn">
-                    <img src="/assets/img/others/2.png">
+                    <img src="/cscadit/assets/img/others/2.png">
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
             <h1 class="sub-title">EXPECTATIONS AND OUTCOMES</h1>
             <div class="cnt ">
                 <div class="icn">
-                    <img src="/assets/img/others/4.png">
+                    <img src="/cscadit/assets/img/others/4.png">
                 </div>
                 <div class="txt">
                     <ul>
@@ -110,6 +110,6 @@
         </div>
         &copy; CSC@ADIT | All Rights Reserved
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="/cscadit/assets/js/script.js"></script>
 </body>
 </html>
