--- a/event.html
+++ b/event.html
@@ -17,12 +17,12 @@
         <img class="logo" src="assets\img\others\csc_logo.png">
         </button>
         <ul id="sidemenu">
-            <li><a href='/index.html'>HOME</a></li>
-            <li><a href='/about.html'>ABOUT US</a></li>
-            <li><a href='/event.html'>EVENTS</a></li>
-            <li><a href='/team.html'>TEAM</a></li>
-            <li><a href='/index.html#contact'>CONTACT</a></li>
-            <li class="joinus"><a href='/index.html#join'>JOIN US</a></li>
+            <li><a href='/cscadit/index.html'>HOME</a></li>
+            <li><a href='/cscadit/about.html'>ABOUT US</a></li>
+            <li><a href='/cscadit/event.html'>EVENTS</a></li>
+            <li><a href='/cscadit/team.html'>TEAM</a></li>
+            <li><a href='/cscadit/index.html#contact'>CONTACT</a></li>
+            <li class="joinus"><a href='/cscadit/index.html#join'>JOIN US</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
