--- a/event.html
+++ b/event.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/navbar.css">
-    <link rel="stylesheet" href="/assets/css/eventstyle.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/style.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/navbar.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/eventstyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
         <h1 class="sub-title">Chronicles of Success: Remembering our Finest Cyber Events!</h1>
         <div class="event-cnt">
             <div class="event-left">
-                <img src="/assets/img/events/event1-1.jpg" alt="" class="event-img">
+                <img src="/cscadit/assets/img/events/event1-1.jpg" alt="" class="event-img">
             </div>
             <div class="event-righ">
                 <h1>Introductory Session of Cyber Security Club</h1>
@@ -50,12 +50,12 @@
                 </div>
             </div>
             <div class="event-righ">
-                <img src="/assets/img/events/event2-1.jpg" alt="" class="event-img">
+                <img src="/cscadit/assets/img/events/event2-1.jpg" alt="" class="event-img">
             </div>
         </div>
         <div class="event-cnt">
             <div class="event-left">
-                <img src="/assets/img/events/event3-1.jpg" alt="" class="event-img">
+                <img src="/cscadit/assets/img/events/event3-1.jpg" alt="" class="event-img">
             </div>
             <div class="event-righ">
                 <h1>Expert Talk on Cyber Crime Awareness & Inauguration Ceremony</h1>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="event-righ">
-                <img src="/assets/img/events/event4-1.jpg" alt="" class="event-img">
+                <img src="/cscadit/assets/img/events/event4-1.jpg" alt="" class="event-img">
             </div>
         </div>
     </div>
@@ -90,6 +90,6 @@
         </div>
         &copy; CSC@ADIT | All Rights Reserved
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="/cscadit/assets/js/script.js"></script>
 </body>
 </html>
