--- a/team.html
+++ b/team.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/navbar.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/flipcard.css">
-    <link rel="stylesheet" href="/assets/css/teams.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/style.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/navbar.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/footer.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/flipcard.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/teams.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
@@ -16,15 +16,15 @@
 </head>
 <body>
     <nav>
-        <img class="logo" src="assets\img\others\csc_logo.png">
+        <img class="logo" src="/cscadit/assets/img/others/csc_logo.png">
         </button>
         <ul id="sidemenu">
-            <li><a href='/index.html'>HOME</a></li>
-            <li><a href='/about.html'>ABOUT US</a></li>
-            <li><a href='/event.html'>EVENTS</a></li>
-            <li><a href='/team.html'>TEAM</a></li>
-            <li><a href='/index.html#contact'>CONTACT</a></li>
-            <li class="joinus"><a href='/index.html#join'>JOIN US</a></li>
+            <li><a href='/cscadit/index.html'>HOME</a></li>
+            <li><a href='/cscadit/about.html'>ABOUT US</a></li>
+            <li><a href='/cscadit/event.html'>EVENTS</a></li>
+            <li><a href='/cscadit/team.html'>TEAM</a></li>
+            <li><a href='/cscadit/index.html#contact'>CONTACT</a></li>
+            <li class="joinus"><a href='/cscadit/index.html#join'>JOIN US</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -37,7 +37,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/krunalsir.jpg" alt="">
+                                <img src="/cscadit/assets/img/team/krunalsir.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -55,7 +55,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -78,7 +78,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/DSC_0148-min (1).JPG" alt="">
+                                <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -95,7 +95,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/DSC_0169-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -117,7 +117,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -136,7 +136,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/DSC_0145-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/DSC_0145-min.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -153,7 +153,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -170,7 +170,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/DSC_0241-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/DSC_0241-min.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -187,7 +187,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/img/team/DSC_0152-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/DSC_0152-min.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -204,7 +204,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -221,7 +221,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0241-min.JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0241-min.JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -238,7 +238,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0152-min.JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0152-min.JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -255,7 +255,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -277,7 +277,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -294,7 +294,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -316,7 +316,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -333,7 +333,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -350,7 +350,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -367,7 +367,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -384,7 +384,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -401,7 +401,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -418,7 +418,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -435,7 +435,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -452,7 +452,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -469,7 +469,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -486,7 +486,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -516,6 +516,6 @@
         </div>
         &copy; CSC@ADIT | All Rights Reserved
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="/cscadit/assets/js/script.js"></script>
 </body>
 </html>
