--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
+                            <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
-                                <h1>Rishiraj <span>Parmar</span></h1>
+                                <h1>Tej <span>Kotadiya</span></h1>
                                 <h3>Founder</h3>
                                 <p>3rd Year Information Technology</p>
                                 <div class="icons">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/tej-kothadiya-05249421b"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="https://instagram.com/tejkothadiya?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -159,16 +159,16 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
+                            <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
-                                <h1>Tej <span>Kotadiya</span></h1>
+                                <h1>Rishiraj <span>Parmar</span></h1>
                                 <h3>Co-Founder</h3>
-                                <p>3rd Year Information</p>
+                                <p>3rd Year Information Technology</p>
                                 <div class="icons">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/rishiraj-parmar-208183227/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="https://www.instagram.com/rish_p01/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
