--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="home-txt">
                     <h2>Dive into the exciting world of cybersecurity with hands-on workshops and real-world challenges.</h1>
                     <div class="btn">
-                        <a href="/index.html#aboutus">Explore More</a>
+                        <a href="/cscadit/index.html#aboutus">Explore More</a>
                     </div>
                 </div>
 
@@ -50,7 +50,7 @@
                         A. D. Patel Institute of Technology (constituent collage of C.V.M) is proud to launch The Cyber Security Club!!! . . . It is mandated to provide industry focused and industry-driven hands-on courses in Cyber Security and Ethical Hacking. Cyber Security Club strives to narrow the gap between the academic approach to cyber security and ethical hacking domains as currently provided by the educational institutions and the practically oriented approach as demanded by the industry. We are offering a wide variety of hands-on workshops and seminars for beginners as well as experts in Network Security, Application Security, Information Security, Operational Security, Disaster Recovery and Business Continuity and many more. End-user education addresses the most unpredictable cyber-security factor: people. Anyone can accidentally introduce a virus to an otherwise secure system by failing to follow good security practices. Teaching users to delete suspicious email attachments, not plug in unidentified USB drives, and various other important lessons is vital for the security of any organization.
                     </p>
                     <div class="btn">
-                        <a href="/index.html#aboutus">Read More</a>
+                        <a href="/cscadit/index.html#aboutus">Read More</a>
                     </div>
                 </div>
                 <div class="about-img">
@@ -105,13 +105,8 @@
                         </div>
                     </div>
                     <div class="btn">
-                        <a href="/event.html">Read More</a>
+                        <a href="/cscadit/event.html">Read More</a>
                     </div>
-                    <!-- <img src="/cscadit/assets/img/events/2.jpg" alt="">
-                    <img src="/cscadit/assets/img/events/3.jpg" alt="">
-                    <img src="/cscadit/assets/img/events/event1-1.jpg" alt="">
-                    <img src="/cscadit/assets/img/events/event1-2.jpg" alt="">
-                    <img src="/cscadit/assets/img/events/event1-3.webp" alt=""> -->
                 </div>
             </div>
         </div>
@@ -176,7 +171,7 @@
                 </div>
             </div>
             <div class="team-btn btn">
-                <a href="/team.html">Read More</a>
+                <a href="/cscadit/team.html">Read More</a>
             </div>
         </div>
     </div> 
@@ -188,7 +183,7 @@
                 <div class="contact-bx">
                     <input type="email" placeholder="Email address">
                     <div class="btn subs">
-                        <a href="/index.html#aboutus">Subscribe</a>
+                        <a href="/cscadit/index.html#aboutus">Subscribe</a>
                     </div>
                 </div>
             </div>
