--- a/team.html
+++ b/team.html
@@ -157,7 +157,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Mirza Mohammadizhanbeg</h1>
+                                    <h1>Mirza MD.Izhanbeg</h1>
                                     <p>2nd Year Computer Science & Design</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/izhan-mirza-ab8062228"><i class="fa-brands fa-linkedin-in"></i></a>
