--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
+                            <img src="/cscadit/assets/img/team/Tej Kotadiya.JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
@@ -154,7 +154,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
+                            <img src="/cscadit/assets/img/team/Rishiraj Parmar.JPG" alt="">
                         </div>
                         <div class="flip-card-back">
                             <div class="flip-card-back-cnt">
