--- a/team.html
+++ b/team.html
@@ -170,11 +170,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/DSC_0241-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/Archi Shah.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Archi <span>Shah</span></h1>
+                                    <h1>Archi Shah</h1>
                                     <p>3rd Year Computer Science & Design</p>
                                     <div class="icons">
                                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
