--- a/team.html
+++ b/team.html
@@ -418,7 +418,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/Vyas Darpit.jpg" alt="">
+                                <img src="/cscadit/assets/img/team/Maitreya Sapariya.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
