--- a/event.html
+++ b/event.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/cscadit/assets/css/style.css">
     <link rel="stylesheet" href="/cscadit/assets/css/navbar.css">
     <link rel="stylesheet" href="/cscadit/assets/css/eventstyle.css">
+    <link rel="stylesheet" href="/cscadit/assets/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
